@@ -26,16 +26,12 @@
   </component>
   <component name="ChangeListManager">
     <list default="true" id="2ff8d003-a5b6-4803-9079-37ae4cdd814b" name="Default" comment="">
-      <change beforePath="$PROJECT_DIR$/.gitignore" beforeDir="false" afterPath="$PROJECT_DIR$/.gitignore" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/.idea/workspace.xml" beforeDir="false" afterPath="$PROJECT_DIR$/.idea/workspace.xml" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/build.py" beforeDir="false" afterPath="$PROJECT_DIR$/build.py" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/ChangeLog" beforeDir="false" afterPath="$PROJECT_DIR$/ChangeLog" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/keno/__main__.py" beforeDir="false" afterPath="$PROJECT_DIR$/keno/__main__.py" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/keno/player_test.py" beforeDir="false" afterPath="$PROJECT_DIR$/keno/player_test.py" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/keno/ticket_test.py" beforeDir="false" afterPath="$PROJECT_DIR$/keno/ticket_test.py" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/keno/utils.py" beforeDir="false" afterPath="$PROJECT_DIR$/keno/game_runner.py" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/keno/utils_test.py" beforeDir="false" afterPath="$PROJECT_DIR$/keno/game_runner_test.py" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/keno/game_runner.py" beforeDir="false" afterPath="$PROJECT_DIR$/keno/game_runner.py" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/keno/game_runner_test.py" beforeDir="false" afterPath="$PROJECT_DIR$/keno/game_runner_test.py" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/lint.txt" beforeDir="false" afterPath="$PROJECT_DIR$/lint.txt" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/requirements_dev.txt" beforeDir="false" afterPath="$PROJECT_DIR$/requirements_dev.txt" afterDir="false" />
     </list>
     <option name="EXCLUDED_CONVERTED_TO_IGNORED" value="true" />
     <option name="TRACKING_ENABLED" value="true" />
@@ -46,23 +42,17 @@
   </component>
   <component name="CoverageDataManager">
     <SUITE FILE_PATH="coverage/keno$Nosetests_in_ticket_test_py.coverage" NAME="Nosetests in ticket_test.py Coverage Results" MODIFIED="1527707467930" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$/keno" />
+    <SUITE FILE_PATH="coverage/keno$Nosetests_for_game_runner_test_test_fast_game.coverage" NAME="Nosetests for game_runner_test.test_fast_game Coverage Results" MODIFIED="1527713196060" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$/keno" />
     <SUITE FILE_PATH="coverage/keno$player_test.coverage" NAME="player_test Coverage Results" MODIFIED="1527706412618" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$/keno" />
     <SUITE FILE_PATH="coverage/keno$Nosetests_in_keno.coverage" NAME="Nosetests in keno Coverage Results" MODIFIED="1527707536113" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$/keno" />
   </component>
   <component name="FileEditorManager">
     <leaf SIDE_TABS_SIZE_LIMIT_KEY="300">
-      <file leaf-file-name="lint.txt" pinned="false" current-in-tab="false">
-        <entry file="file://$PROJECT_DIR$/lint.txt">
-          <provider selected="true" editor-type-id="text-editor">
-            <state relative-caret-position="-102" />
-          </provider>
-        </entry>
-      </file>
       <file leaf-file-name="game_runner_test.py" pinned="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/keno/game_runner_test.py">
           <provider selected="true" editor-type-id="text-editor">
-            <state relative-caret-position="170">
-              <caret line="10" column="7" selection-start-line="10" selection-start-column="7" selection-end-line="10" selection-end-column="7" />
+            <state relative-caret-position="187">
+              <caret line="11" column="31" selection-start-line="11" selection-start-column="31" selection-end-line="11" selection-end-column="31" />
             </state>
           </provider>
         </entry>
@@ -89,7 +79,7 @@
         <entry file="file://$PROJECT_DIR$/.gitignore">
           <provider selected="true" editor-type-id="text-editor">
             <state relative-caret-position="102">
-              <caret line="14" column="10" lean-forward="true" selection-start-line="14" selection-start-column="10" selection-end-line="14" selection-end-column="10" />
+              <caret line="14" column="10" selection-start-line="14" selection-start-column="10" selection-end-line="14" selection-end-column="10" />
             </state>
           </provider>
         </entry>
@@ -121,20 +111,29 @@
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="game_runner.py" pinned="false" current-in-tab="true">
+      <file leaf-file-name="game_runner.py" pinned="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/keno/game_runner.py">
           <provider selected="true" editor-type-id="text-editor">
-            <state relative-caret-position="57">
-              <caret line="16" column="63" selection-start-line="16" selection-start-column="63" selection-end-line="16" selection-end-column="63" />
+            <state relative-caret-position="206">
+              <caret line="19" column="63" selection-start-line="17" selection-start-column="23" selection-end-line="19" selection-end-column="63" />
             </state>
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="__main__.py" pinned="false" current-in-tab="false">
+      <file leaf-file-name="game.py" pinned="false" current-in-tab="false">
+        <entry file="file://$PROJECT_DIR$/keno/game.py">
+          <provider selected="true" editor-type-id="text-editor">
+            <state relative-caret-position="108">
+              <caret line="141" column="12" selection-start-line="141" selection-start-column="12" selection-end-line="141" selection-end-column="12" />
+            </state>
+          </provider>
+        </entry>
+      </file>
+      <file leaf-file-name="__main__.py" pinned="false" current-in-tab="true">
         <entry file="file://$PROJECT_DIR$/keno/__main__.py">
           <provider selected="true" editor-type-id="text-editor">
-            <state relative-caret-position="102">
-              <caret line="6" column="20" lean-forward="true" selection-start-line="6" selection-start-column="20" selection-end-line="6" selection-end-column="20" />
+            <state relative-caret-position="272">
+              <caret line="16" column="16" lean-forward="true" selection-start-line="16" selection-start-column="16" selection-end-line="16" selection-end-column="16" />
             </state>
           </provider>
         </entry>
@@ -208,8 +207,9 @@
         <option value="$PROJECT_DIR$/.gitignore" />
         <option value="$PROJECT_DIR$/keno/ticket_test.py" />
         <option value="$PROJECT_DIR$/keno/player_test.py" />
-        <option value="$PROJECT_DIR$/keno/__main__.py" />
         <option value="$PROJECT_DIR$/keno/game_runner.py" />
+        <option value="$PROJECT_DIR$/keno/__main__.py" />
+        <option value="$PROJECT_DIR$/keno/game_runner_test.py" />
       </list>
     </option>
   </component>
@@ -323,7 +323,7 @@
       </list>
     </option>
   </component>
-  <component name="RunManager" selected="Python tests.Nosetests in keno">
+  <component name="RunManager" selected="Python tests.Nosetests for game_runner_test.test_fast_game">
     <configuration name="player_test" type="PythonConfigurationType" factoryName="Python" temporary="true">
       <module name="keno" />
       <option name="INTERPRETER_OPTIONS" value="" />
@@ -342,6 +342,21 @@
       <option name="SHOW_COMMAND_LINE" value="false" />
       <option name="EMULATE_TERMINAL" value="false" />
       <option name="MODULE_MODE" value="false" />
+    </configuration>
+    <configuration name="Nosetests for game_runner_test.test_fast_game" type="tests" factoryName="Nosetests" temporary="true" nameIsGenerated="true">
+      <module name="keno" />
+      <option name="INTERPRETER_OPTIONS" value="" />
+      <option name="PARENT_ENVS" value="true" />
+      <option name="SDK_HOME" value="" />
+      <option name="WORKING_DIRECTORY" value="$PROJECT_DIR$/keno" />
+      <option name="IS_MODULE_SDK" value="true" />
+      <option name="ADD_CONTENT_ROOTS" value="true" />
+      <option name="ADD_SOURCE_ROOTS" value="true" />
+      <EXTENSION ID="PythonCoverageRunConfigurationExtension" runner="coverage.py" />
+      <option name="_new_regexPattern" value="&quot;&quot;" />
+      <option name="_new_additionalArguments" value="&quot;&quot;" />
+      <option name="_new_target" value="&quot;game_runner_test.test_fast_game&quot;" />
+      <option name="_new_targetType" value="&quot;PYTHON&quot;" />
     </configuration>
     <configuration name="Nosetests in keno" type="tests" factoryName="Nosetests" temporary="true" nameIsGenerated="true">
       <module name="keno" />
@@ -377,9 +392,11 @@
       <item itemvalue="Python.player_test" />
       <item itemvalue="Python tests.Nosetests in ticket_test.py" />
       <item itemvalue="Python tests.Nosetests in keno" />
+      <item itemvalue="Python tests.Nosetests for game_runner_test.test_fast_game" />
     </list>
     <recent_temporary>
       <list>
+        <item itemvalue="Python tests.Nosetests for game_runner_test.test_fast_game" />
         <item itemvalue="Python tests.Nosetests in keno" />
         <item itemvalue="Python tests.Nosetests in ticket_test.py" />
         <item itemvalue="Python.player_test" />
@@ -411,6 +428,9 @@
     </history-entry>
     <history-entry file="Nosetests_in_keno - 2018.05.30 at 15h 12m 16s.xml">
       <configuration name="Nosetests in keno" configurationId="tests" />
+    </history-entry>
+    <history-entry file="Nosetests_for_game_runner_test_test_fast_game - 2018.05.30 at 16h 46m 37s.xml">
+      <configuration name="Nosetests for game_runner_test.test_fast_game" configurationId="tests" />
     </history-entry>
   </component>
   <component name="ToolWindowManager">
@@ -621,13 +641,6 @@
         </state>
       </provider>
     </entry>
-    <entry file="file://$PROJECT_DIR$/keno/game.py">
-      <provider selected="true" editor-type-id="text-editor">
-        <state relative-caret-position="108">
-          <caret line="141" column="12" selection-start-line="141" selection-start-column="12" selection-end-line="141" selection-end-column="12" />
-        </state>
-      </provider>
-    </entry>
     <entry file="file://$PROJECT_DIR$/keno/player.py">
       <provider selected="true" editor-type-id="text-editor">
         <state relative-caret-position="230">
@@ -638,13 +651,6 @@
     <entry file="file://$PROJECT_DIR$/lint.txt">
       <provider selected="true" editor-type-id="text-editor">
         <state relative-caret-position="-102" />
-      </provider>
-    </entry>
-    <entry file="file://$PROJECT_DIR$/keno/game_runner_test.py">
-      <provider selected="true" editor-type-id="text-editor">
-        <state relative-caret-position="170">
-          <caret line="10" column="7" selection-start-line="10" selection-start-column="7" selection-end-line="10" selection-end-column="7" />
-        </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/requirements_dev.txt">
@@ -664,7 +670,7 @@
     <entry file="file://$PROJECT_DIR$/.gitignore">
       <provider selected="true" editor-type-id="text-editor">
         <state relative-caret-position="102">
-          <caret line="14" column="10" lean-forward="true" selection-start-line="14" selection-start-column="10" selection-end-line="14" selection-end-column="10" />
+          <caret line="14" column="10" selection-start-line="14" selection-start-column="10" selection-end-line="14" selection-end-column="10" />
         </state>
       </provider>
     </entry>
@@ -689,17 +695,31 @@
         </state>
       </provider>
     </entry>
-    <entry file="file://$PROJECT_DIR$/keno/__main__.py">
+    <entry file="file://$PROJECT_DIR$/keno/game.py">
       <provider selected="true" editor-type-id="text-editor">
-        <state relative-caret-position="102">
-          <caret line="6" column="20" lean-forward="true" selection-start-line="6" selection-start-column="20" selection-end-line="6" selection-end-column="20" />
+        <state relative-caret-position="108">
+          <caret line="141" column="12" selection-start-line="141" selection-start-column="12" selection-end-line="141" selection-end-column="12" />
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/keno/game_runner.py">
       <provider selected="true" editor-type-id="text-editor">
-        <state relative-caret-position="57">
-          <caret line="16" column="63" selection-start-line="16" selection-start-column="63" selection-end-line="16" selection-end-column="63" />
+        <state relative-caret-position="206">
+          <caret line="19" column="63" selection-start-line="17" selection-start-column="23" selection-end-line="19" selection-end-column="63" />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/keno/game_runner_test.py">
+      <provider selected="true" editor-type-id="text-editor">
+        <state relative-caret-position="187">
+          <caret line="11" column="31" selection-start-line="11" selection-start-column="31" selection-end-line="11" selection-end-column="31" />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/keno/__main__.py">
+      <provider selected="true" editor-type-id="text-editor">
+        <state relative-caret-position="272">
+          <caret line="16" column="16" lean-forward="true" selection-start-line="16" selection-start-column="16" selection-end-line="16" selection-end-column="16" />
         </state>
       </provider>
     </entry>
