@@ -8,6 +8,26 @@ R:179, 4: Method could be a function (no-self-use)
 R:187, 4: Method could be a function (no-self-use)
 R:201, 4: Method could be a function (no-self-use)
 R:224, 4: Method could be a function (no-self-use)
+************* Module keno.game_runner
+W: 46, 0: TODO: Maybe implement Keno of other states. (fixme)
+W: 62, 0: TODO: check minimum winning on 1 ticket!! (fixme)
+C:134, 0: Line too long (124/120) (line-too-long)
+C:177, 0: Final newline missing (missing-final-newline)
+R: 14, 0: Too many instance attributes (9/7) (too-many-instance-attributes)
+R: 18, 4: Too many arguments (7/5) (too-many-arguments)
+W: 57,12: Unused variable 'i' (unused-variable)
+W: 82, 8: String statement has no effect (pointless-string-statement)
+R: 72, 4: Too many branches (15/12) (too-many-branches)
+C:156, 4: Missing method docstring (missing-docstring)
+C:176, 4: Constant name "runner" doesn't conform to UPPER_CASE naming style (invalid-name)
+E:176,13: No value for argument 'max_ticket_types' in constructor call (no-value-for-parameter)
+E:176,13: No value for argument 'max_plays_with_ticket_type' in constructor call (no-value-for-parameter)
+E:176,13: No value for argument 'max_loss' in constructor call (no-value-for-parameter)
+E:176,13: No value for argument 'sufficient_winnings' in constructor call (no-value-for-parameter)
+E:176,13: No value for argument 'max_generations' in constructor call (no-value-for-parameter)
+************* Module keno.game_runner_test
+W:  3, 0: TODO: This will haunt me until I write the tests. (fixme)
+C: 19, 0: Final newline missing (missing-final-newline)
 ************* Module keno.player
 R:  9, 0: Too many instance attributes (8/7) (too-many-instance-attributes)
 C: 57, 4: Method name "go" doesn't conform to snake_case naming style (invalid-name)
@@ -23,18 +43,7 @@ E:200,32: Too many arguments for format string (too-many-format-args)
 C: 22,11: Comparison should be str(ticket) != '' (misplaced-comparison-constant)
 C: 24, 0: Function name "test_ticket_validator_is_good_ticket" doesn't conform to snake_case naming style (invalid-name)
 C: 54, 0: Function name "test_ticket_validator_basically_ok" doesn't conform to snake_case naming style (invalid-name)
-************* Module keno.utils
-W: 33, 0: TODO: check minimum winning on 1 ticket!! (fixme)
-W: 42, 0: Bad indentation. Found 13 spaces, expected 12 (bad-indentation)
-W:109, 0: Bad indentation. Found 22 spaces, expected 20 (bad-indentation)
-C:142, 0: Final newline missing (missing-final-newline)
-R: 14, 0: Too many local variables (18/15) (too-many-locals)
-W: 51, 4: String statement has no effect (pointless-string-statement)
-R: 14, 0: Too many branches (22/12) (too-many-branches)
-R: 14, 0: Too many statements (68/50) (too-many-statements)
-************* Module keno.utils_test
-W:  3, 0: TODO: This will haunt me until I write the tests. (fixme)
 
 ------------------------------------------------------------------
-Your code has been rated at 9.16/10 (previous run: 9.19/10, -0.04)
+Your code has been rated at 8.49/10 (previous run: 8.48/10, +0.01)
 
