@@ -1,5 +1,8 @@
 CHANGES
 =======
 
+* coverage
+* linting
+* build script work
 * Working game
 * Initial commit
